Added changes for performance improvement